--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+reqwest = { version = "0.12.14", features = ["json"] }
+serde_json = "1.0.140"
+tokio = { version = "1.44.1", features = ["full"] }
