--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+regex = "1.11.1"
 reqwest = { version = "0.12.14", features = ["json"] }
 serde_json = "1.0.140"
 tokio = { version = "1.44.1", features = ["full"] }
