--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -26,6 +26,8 @@ jobs:
 
       - name: Commit and push updated README
         run: |
+          git config --global user.name "Anirudh Konidala"
+          git config --global user.email "kidskodingclub@gmail.com"
           git add README.md
           git commit -m "Update README with latest GitHub activity"
           git push
