--- a/.github/workflows/update-activity.yml
+++ b/.github/workflows/update-activity.yml
@@ -5,6 +5,9 @@ on:
     - cron: '*/10 * * * *'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   update-readme:
     runs-on: ubuntu-latest
